# financial-analyzer

./: README.md  pyproject.toml
src/: agent.py  dashboard.py
